--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
     <template class="preloader-template">
       <div class="preloader">
-        <div class="preloader-chasing-squares">
+        <class="preloader-chasing-squares">
           <div class="square"></div>
           <div class="square"></div>
           <div class="square"></div>
